--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello World</title>
-    <p>王哥最爱红米</p>
+    <title>MIUMIU</title>
+    <p>MIUMIU的空间</p>
+    <img src="img/miumiu1.jpeg" alt="">
+
 </head>
 <body>
 
