--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>MIUMIU</title>
-    <p>MIUMIU的空间</p>
-    <img src="img/miumiu1.jpeg" alt="">
+    <h1>MIU空间</h1>
+    <img src="img/miumiu1.jpeg" >
 
 </head>
 <body>
